--- a/frontdend/html.html
+++ b/frontdend/html.html
@@ -1,44 +1,147 @@
 <!DOCTYPE html>
-<html>
+<!-- Created By CodingNepal - www.codingnepalweb.com -->
+<html lang="en" dir="ltr">
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="utf-8" />
+        <title>Autocomplete Search Box | CodingNepal</title>
+        <link rel="stylesheet" href="style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Search box with default text</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+            * {
+                box-sizing: border-box;
+            }
+
+            body {
+                background: #6d7b98;
+                font-size: 18px;
+                font-family: 'Roboto', sans-serif;
+            }
+
+            .container {
+            }
+
+            .wrapper {
+                margin: 0 auto;
+                background: #ffffff;
+                border-radius: 5px;
+                box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.15);
+                position: relative;
+                width: 450px;
+            }
+
+            input {
+                width: 100%;
+                border: none;
+                height: 50px;
+                border-radius: 5px;
+                padding: 0px 40px 0px 10px;
+                font-size: 18px;
+                box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+            }
+
+            input:focus {
+                outline: none;
+            }
+
+            button {
+                position: absolute;
+                border: none;
+                background: none;
+                top: 0;
+                right: 0;
+                height: 50px;
+                line-height: 50px;
+                padding: 0;
+                width: 50px;
+            }
+
+            button:focus {
+                outline: none;
+            }
+
+            button i {
+                width: 100%;
+                color: #6d7b98;
+                line-height: 50px;
+                font-size: 22px;
+            }
+
+            .results {
+                padding: 0px;
+            }
+
+            .results ul {
+                margin: 0;
+                padding: 0;
+            }
+            .results ul li {
+                list-style: none;
+                border-radius: 3px;
+                opacity: 0;
+                display: none;
+                padding: 8px 12px;
+                transition: all 0.5s linear;
+            }
+
+            .show .results ul li {
+                opacity: 1;
+                display: block;
+            }
+
+            .show .results {
+                padding: 10px;
+            }
+
+            .results ul li:hover {
+                background: #ececec;
+            }
+        </style>
     </head>
-
     <body>
-        <h1 style="color: green">GeeksforGeeks</h1>
-        <p>Search word in HTML using JavaScript</p>
-        <form>
-            <input type="text" name="Search" id="Search" />
-            <input type="submit" name="submit" value="Search" />
-        </form>
-        <script>
-            // Text to be displayed on search box by default
-            const defaultTextValue = 'Search...';
+        <div class="container">
+            <div class="wrapper">
+                <input type="text" name="search" id="search" placeholder="Type to search" autocomplete="chrome-off" />
+                <button><i class="fa fa-search"></i></button>
+                <div class="results">
+                    <ul></ul>
+                </div>
+            </div>
+        </div>
+        <script type="text/javascript">
+            let searchable = ['Elastic', 'PHP', 'Something about CSS', 'How to code', 'JavaScript', 'Coding', 'Some other item'];
 
-            // Here input id should match with the
-            // parameter of getElementById
-            let searchBox = document.getElementById('Search');
+            const searchInput = document.getElementById('search');
+            const searchWrapper = document.querySelector('.wrapper');
+            const resultsWrapper = document.querySelector('.results');
 
-            // Default text to be displayed
-            searchBox.value = defaultTextValue;
-
-            // Search box on focus
-            searchBox.onfocus = function () {
-                if (this.value == defaultTextValue) {
-                    // Clears the search box
-                    this.value = '';
+            searchInput.addEventListener('keyup', () => {
+                let results = [];
+                let input = searchInput.value;
+                if (input.length) {
+                    results = searchable.filter((item) => {
+                        return item.toLowerCase().includes(input.toLowerCase());
+                    });
                 }
-            };
+                renderResults(results);
+            });
 
-            // Search box when clicked outside
-            searchBox.onblur = function () {
-                if (this.value == '') {
-                    // Restores the search box with default value
-                    this.value = defaultTextValue;
+            function renderResults(results) {
+                if (!results.length) {
+                    return searchWrapper.classList.remove('show');
                 }
-            };
+
+                const content = results
+                    .map((item) => {
+                        return `<li>${item}</li>`;
+                    })
+                    .join('');
+
+                searchWrapper.classList.add('show');
+                resultsWrapper.innerHTML = `<ul>${content}</ul>`;
+            }
         </script>
     </body>
 </html>
