--- a/frontdend/index.html
+++ b/frontdend/index.html
@@ -7,8 +7,11 @@
         <link rel="stylesheet" href="./https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
         <link rel="stylesheet" href="./assets/css/base.css" />
         <link rel="stylesheet" href="./assets/css/main.css" />
-        <link rel="stylesheet" href="./assets/fonts/fontawesome-free-6.2.1-web/css/all.min.css" />
+        <!-- <link rel="stylesheet" href="./assets/fonts/fontawesome-free-6.2.1-web/css/all.min.css" /> -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
         <script src="./assets/js/main.js"></script>
+        <script src="./assets/js/suggestions.js"></script>
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
@@ -25,33 +28,73 @@
                     <div class="header__logo">
                         <a href="#"><img src="./assets/image/logo_book365.png" alt="" /></a>
                     </div>
-                    <div class="header__search">
-                        <label for="search" style="display: none"></label>
-                        <input type="search" id="search" />
-                        <button type="submit">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                        </button>
-                        <!-- <div class="product__search-cart">
-                            <div class="search-cart">
-                                <div class="product-image">
-                                    <img src="./assets/image/https://book365.vn/upload/resize_cache/iblock/a0e/186_253_1/a0ec5da17c4f93b2ebf0c29d338d307d.jpeg" alt="" />
-                                </div>
-                                <div class="product-name">Hãy khiến tương lai biết ơn vì hiện tại bạn đã cố gắng hết mình</div>
+                    <div class="wrapper">
+                        <div class="search-input">
+                            <a href="" target="_blank" hidden></a>
+                            <input type="text" placeholder="Type to search.." />
+                            <div class="autocom-box">
+                                <!-- here list are inserted from javascript -->
                             </div>
-                            <div class="search-cart">
-                                <div class="product-image">
-                                    <img src="./assets/image/https://book365.vn/upload/resize_cache/iblock/a0e/186_253_1/a0ec5da17c4f93b2ebf0c29d338d307d.jpeg" alt="" />
-                                </div>
-                                <div class="product-name">Hãy khiến tương lai biết ơn vì hiện tại bạn đã cố gắng hết mình</div>
-                            </div>
-                            <div class="search-cart">
-                                <div class="product-image">
-                                    <img src="./assets/image/https://book365.vn/upload/resize_cache/iblock/a0e/186_253_1/a0ec5da17c4f93b2ebf0c29d338d307d.jpeg" alt="" />
-                                </div>
-                                <div class="product-name">Hãy khiến tương lai biết ơn vì hiện tại bạn đã cố gắng hết mình</div>
-                            </div>
-                        </div> -->
+                            <div class="icon"><i class="fas fa-search"></i></div>
+                        </div>
                     </div>
+                    <script type="text/javascript">
+                        const searchWrapper = document.querySelector('.search-input');
+                        const inputBox = searchWrapper.querySelector('input');
+                        const suggBox = searchWrapper.querySelector('.autocom-box');
+                        const icon = searchWrapper.querySelector('.icon');
+                        let linkTag = searchWrapper.querySelector('a');
+                        let webLink;
+                        // if user press any key and release
+                        inputBox.onkeyup = (e) => {
+                            let userData = e.target.value; //user enetered data
+                            let emptyArray = [];
+                            if (userData) {
+                                icon.onclick = () => {
+                                    webLink = `https://www.google.com/search?q=${userData}`;
+                                    linkTag.setAttribute('href', webLink);
+                                    linkTag.click();
+                                };
+                                emptyArray = suggestions.filter((data) => {
+                                    //filtering array value and user characters to lowercase and return only those words which are start with user enetered chars
+                                    return data.toLocaleLowerCase().startsWith(userData.toLocaleLowerCase());
+                                });
+                                emptyArray = emptyArray.map((data) => {
+                                    // passing return data inside li tag
+                                    return (data = `<li>${data}</li>`);
+                                });
+                                searchWrapper.classList.add('active'); //show autocomplete box
+                                showSuggestions(emptyArray);
+                                let allList = suggBox.querySelectorAll('li');
+                                for (let i = 0; i < allList.length; i++) {
+                                    //adding onclick attribute in all li tag
+                                    allList[i].setAttribute('onclick', 'select(this)');
+                                }
+                            } else {
+                                searchWrapper.classList.remove('active'); //hide autocomplete box
+                            }
+                        };
+                        function select(element) {
+                            let selectData = element.textContent;
+                            inputBox.value = selectData;
+                            icon.onclick = () => {
+                                webLink = `https://www.google.com/search?q=${selectData}`;
+                                linkTag.setAttribute('href', webLink);
+                                linkTag.click();
+                            };
+                            searchWrapper.classList.remove('active');
+                        }
+                        function showSuggestions(list) {
+                            let listData;
+                            if (!list.length) {
+                                userValue = inputBox.value;
+                                listData = `<li>${userValue}</li>`;
+                            } else {
+                                listData = list.join('');
+                            }
+                            suggBox.innerHTML = listData;
+                        }
+                    </script>
                     <div class="header__register header__cart">
                         <div class="header__register-item">
                             <div class="register__icon">
@@ -138,6 +181,8 @@
                             <div class="item-body" id="slide">
                                 <div class="item-child">
                                     <div class="item-img">
+                                        <div class="sale">30%</div>
+                                        <!-- <div class="sale">30%</div> -->
                                         <img src="https://book365.vn/upload/resize_cache/iblock/59d/186_253_1/59d7d6ce4f8cfcb24d549697ea2dca80.jpeg" alt="" />
                                     </div>
                                     <div class="item-title">
@@ -155,6 +200,7 @@
                                 </div>
                                 <div class="item-child">
                                     <div class="item-img">
+                                        <div class="sale">30%</div>
                                         <img src="https://book365.vn/upload/resize_cache/iblock/59d/186_253_1/59d7d6ce4f8cfcb24d549697ea2dca80.jpeg" alt="" />
                                     </div>
                                     <div class="item-title">
@@ -172,6 +218,7 @@
                                 </div>
                                 <div class="item-child">
                                     <div class="item-img">
+                                        <div class="sale">30%</div>
                                         <img src="https://book365.vn/upload/resize_cache/iblock/59d/186_253_1/59d7d6ce4f8cfcb24d549697ea2dca80.jpeg" alt="" />
                                     </div>
                                     <div class="item-title">
@@ -189,6 +236,7 @@
                                 </div>
                                 <div class="item-child">
                                     <div class="item-img">
+                                        <div class="sale">30%</div>
                                         <img src="https://book365.vn/upload/resize_cache/iblock/59d/186_253_1/59d7d6ce4f8cfcb24d549697ea2dca80.jpeg" alt="" />
                                     </div>
                                     <div class="item-title">
@@ -206,6 +254,7 @@
                                 </div>
                                 <div class="item-child">
                                     <div class="item-img">
+                                        <div class="sale">30%</div>
                                         <img src="https://book365.vn/upload/resize_cache/iblock/59d/186_253_1/59d7d6ce4f8cfcb24d549697ea2dca80.jpeg" alt="" />
                                     </div>
                                     <div class="item-title">
@@ -223,6 +272,7 @@
                                 </div>
                                 <div class="item-child">
                                     <div class="item-img">
+                                        <div class="sale">30%</div>
                                         <img src="https://book365.vn/upload/resize_cache/iblock/59d/186_253_1/59d7d6ce4f8cfcb24d549697ea2dca80.jpeg" alt="" />
                                     </div>
                                     <div class="item-title">
@@ -240,6 +290,7 @@
                                 </div>
                                 <div class="item-child">
                                     <div class="item-img">
+                                        <div class="sale">30%</div>
                                         <img src="https://book365.vn/upload/resize_cache/iblock/59d/186_253_1/59d7d6ce4f8cfcb24d549697ea2dca80.jpeg" alt="" />
                                     </div>
                                     <div class="item-title">
@@ -257,6 +308,7 @@
                                 </div>
                                 <div class="item-child">
                                     <div class="item-img">
+                                        <div class="sale">30%</div>
                                         <img src="https://book365.vn/upload/resize_cache/iblock/59d/186_253_1/59d7d6ce4f8cfcb24d549697ea2dca80.jpeg" alt="" />
                                     </div>
                                     <div class="item-title">
@@ -274,6 +326,7 @@
                                 </div>
                                 <div class="item-child">
                                     <div class="item-img">
+                                        <div class="sale">30%</div>
                                         <img src="https://book365.vn/upload/resize_cache/iblock/59d/186_253_1/59d7d6ce4f8cfcb24d549697ea2dca80.jpeg" alt="" />
                                     </div>
                                     <div class="item-title">
@@ -300,6 +353,7 @@
                             <div class="product">
                                 <div class="item-child">
                                     <div class="item-img">
+                                        <div class="sale">30%</div>
                                         <img src="https://book365.vn/upload/resize_cache/iblock/59d/186_253_1/59d7d6ce4f8cfcb24d549697ea2dca80.jpeg" alt="" />
                                     </div>
                                     <div class="item-title">
@@ -317,6 +371,7 @@
                                 </div>
                                 <div class="item-child">
                                     <div class="item-img">
+                                        <div class="sale">30%</div>
                                         <img src="https://book365.vn/upload/resize_cache/iblock/59d/186_253_1/59d7d6ce4f8cfcb24d549697ea2dca80.jpeg" alt="" />
                                     </div>
                                     <div class="item-title">
@@ -334,6 +389,7 @@
                                 </div>
                                 <div class="item-child">
                                     <div class="item-img">
+                                        <div class="sale">30%</div>
                                         <img src="https://book365.vn/upload/resize_cache/iblock/59d/186_253_1/59d7d6ce4f8cfcb24d549697ea2dca80.jpeg" alt="" />
                                     </div>
                                     <div class="item-title">
@@ -351,6 +407,7 @@
                                 </div>
                                 <div class="item-child">
                                     <div class="item-img">
+                                        <div class="sale">30%</div>
                                         <img src="https://book365.vn/upload/resize_cache/iblock/59d/186_253_1/59d7d6ce4f8cfcb24d549697ea2dca80.jpeg" alt="" />
                                     </div>
                                     <div class="item-title">
@@ -368,6 +425,7 @@
                                 </div>
                                 <div class="item-child">
                                     <div class="item-img">
+                                        <div class="sale">30%</div>
                                         <img src="https://book365.vn/upload/resize_cache/iblock/59d/186_253_1/59d7d6ce4f8cfcb24d549697ea2dca80.jpeg" alt="" />
                                     </div>
                                     <div class="item-title">
@@ -385,6 +443,7 @@
                                 </div>
                                 <div class="item-child">
                                     <div class="item-img">
+                                        <div class="sale">30%</div>
                                         <img src="https://book365.vn/upload/resize_cache/iblock/59d/186_253_1/59d7d6ce4f8cfcb24d549697ea2dca80.jpeg" alt="" />
                                     </div>
                                     <div class="item-title">
@@ -402,6 +461,7 @@
                                 </div>
                                 <div class="item-child">
                                     <div class="item-img">
+                                        <div class="sale">30%</div>
                                         <img src="https://book365.vn/upload/resize_cache/iblock/59d/186_253_1/59d7d6ce4f8cfcb24d549697ea2dca80.jpeg" alt="" />
                                     </div>
                                     <div class="item-title">
